# rust-for-sqlite

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
examples/1-sqlite-intro/: Cargo.toml
examples/1-sqlite-intro/src/: main.rs
examples/2-core-sql/: Cargo.toml
examples/2-core-sql/src/: main.rs
examples/3-error-handling/: Cargo.toml
examples/3-error-handling/src/: main.rs
examples/4-csv-ingestion/: Cargo.toml
examples/4-csv-ingestion/src/: main.rs
examples/4-csv-serde/: Cargo.toml
examples/4-csv-serde/src/: main.rs
examples/5-json/: Cargo.toml  sensors.json
examples/5-json/src/: main.rs
examples/6-db-dump/: Cargo.toml  dump.sql
examples/6-db-dump/src/: main.rs
examples/7-cli-architecture/: Cargo.toml
examples/7-cli-architecture/src/: main.rs
examples/8-filesystem-crawl/: Cargo.toml
examples/8-filesystem-crawl/src/: main.rs
examples/9-query-export/: Cargo.toml
examples/9-query-export/src/: main.rs
fscrawl/: Cargo.toml
fscrawl/src/: db.rs  main.rs
labs/: lab-1.md  lab-2.md  lab-3.md  lab-4.md  lab-5.md  lab-6.md  lab-7.md  lab-8.md  lab-9.md
