[package]
name = "fscrawl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fscrawl"
path = "src/main.rs"

[dependencies]
rusqlite = "0.31"
clap = { version = "4", features = ["derive", "env"] }
walkdir = "2"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
